src/cstgen/snapshots/fin__cstgen__tests__insta@expr_if.fin.snap
---
source: src/cstgen/mod.rs
expression: tree
input_file: src/cstgen/snapshots/validation/expr_if.fin
---
File@0..16
  ItemExpr@0..16
    ExprIf@0..16
      IfKw@0..2 "if"
      Whitespace@2..3 " "
      ExprIdent@3..8
        Ident@3..7 "cond"
        Whitespace@7..8 " "
      ExprBlock@8..16
        BraceOpen@8..9 "{"
        Whitespace@9..10 " "
        StmtExpr@10..15
          ExprIdent@10..15
            Ident@10..14 "body"
            Whitespace@14..15 " "
        BraceClose@15..16 "}"
