src/cstgen/snapshots/fin__cstgen__tests__insta@expr_impl.fin.snap
---
source: src/cstgen/mod.rs
expression: tree
input_file: src/cstgen/snapshots/validation/expr_impl.fin
---
File@0..11
  ItemExpr@0..11
    ExprImpl@0..11
      ImplKw@0..4 "impl"
      Whitespace@4..5 " "
      ExprIdent@5..9
        Ident@5..8 "Foo"
        Whitespace@8..9 " "
      BraceOpen@9..10 "{"
      BraceClose@10..11 "}"
