src/cstgen/snapshots/fin__cstgen__tests__insta@expr_impl_with_item.fin.snap
---
source: src/cstgen/mod.rs
expression: tree
input_file: src/cstgen/snapshots/validation/expr_impl_with_item.fin
---
File@0..33
  ItemExpr@0..33
    ExprImpl@0..33
      ImplKw@0..4 "impl"
      Whitespace@4..5 " "
      ExprIdent@5..9
        Ident@5..8 "Foo"
        Whitespace@8..9 " "
      BraceOpen@9..10 "{"
      Whitespace@10..15 "\n    "
      ItemConst@15..32
        ConstKw@15..20 "const"
        Whitespace@20..21 " "
        PatIdent@21..25
          Name@21..25
            Ident@21..24 "bar"
            Whitespace@24..25 " "
        Eq@25..26 "="
        Whitespace@26..27 " "
        ExprIdent@27..30
          Ident@27..30 "baz"
        Semi@30..31 ";"
        Whitespace@31..32 "\n"
      BraceClose@32..33 "}"
