src/cstgen/snapshots/fin__cstgen__tests__insta@expr_item.fin.snap
---
source: src/cstgen/mod.rs
expression: tree
input_file: src/cstgen/snapshots/validation/expr_item.fin
---
File@0..4
  ItemExpr@0..4
    ExprIdent@0..3
      Ident@0..3 "foo"
    Semi@3..4 ";"
