src/cstgen/snapshots/fin__cstgen__tests__insta@expr_ptr.fin.snap
---
source: src/cstgen/mod.rs
expression: tree
input_file: src/cstgen/snapshots/validation/expr_ptr.fin
---
File@0..4
  ItemExpr@0..4
    ExprPtr@0..4
      Asterisk@0..1 "*"
      ExprIdent@1..4
        Ident@1..4 "foo"
