src/cstgen/snapshots/fin__cstgen__tests__insta@expr_ref.fin.snap
---
source: src/cstgen/mod.rs
expression: tree
input_file: src/cstgen/snapshots/validation/expr_ref.fin
---
File@0..4
  ItemExpr@0..4
    ExprRef@0..4
      Ampersand@0..1 "&"
      ExprIdent@1..4
        Ident@1..4 "foo"
